# bazel_rules_pmd

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: .bazelrc  main.yml  release.yml  release_prep.sh
docs/: BUILD  rule.md
pmd/: BUILD  BUILD.pmd.bazel  defs.bzl  dependencies.bzl  extensions.bzl  toolchains.bzl  versions.bzl
pmd/wrapper/: BUILD
pmd/wrapper/src/main/java/io/buildfoundation/bazel/pmd/: Main.java
pmd/wrapper/src/main/kotlin/io/buildfoundation/bazel/pmd/: Application.kt  Platform.kt  main.kt
pmd/wrapper/src/main/kotlin/io/buildfoundation/bazel/pmd/execute/: Executable.kt  Pmd.kt  Result.kt  WorkerExecutable.kt
pmd/wrapper/src/main/kotlin/io/buildfoundation/bazel/pmd/stream/: Streams.kt  WorkerStreams.kt
tests/analysis/: tests.bzl
tests/integration/: BUILD  pmd_rulesets_error.xml  pmd_rulesets_errorless.xml  rulesets.xml  suite.sh  test_error.sh  test_errorless.sh
tests/integration/src/main/java/: B.java
