load("@rules_java//java:defs.bzl", "java_binary", "java_import")

java_import(
    name = "pmd",
    jars = glob(["*.jar"]),
    visibility = ["//visibility:public"],
)

java_binary(
    name = "bin",
    main_class = "net.sourceforge.pmd.PMD",
    visibility = ["//visibility:public"],
    runtime_deps = [":pmd"],
)
